[gd_scene load_steps=13 format=3 uid="uid://d1ncb4sh7y5ni"]

[ext_resource type="Script" path="res://objects/Player/player.gd" id="1_otwkr"]
[ext_resource type="Script" path="res://objects/Player/PlayerStateMachine.gd" id="2_82wuj"]
[ext_resource type="Texture2D" uid="uid://ban8vynekmml7" path="res://assets/testprotag.png" id="2_dtq1s"]
[ext_resource type="Script" path="res://objects/Player/States/WalkState.gd" id="3_mxsvf"]
[ext_resource type="Script" path="res://objects/Player/States/IdleState.gd" id="4_4mfob"]
[ext_resource type="Script" path="res://objects/Player/States/JumpState.gd" id="5_h8uob"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ponx"]
atlas = ExtResource("2_dtq1s")
region = Rect2(0, 0, 778, 1596)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw1ab"]
atlas = ExtResource("2_dtq1s")
region = Rect2(0, 0, 778, 1596)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpvfd"]
atlas = ExtResource("2_dtq1s")
region = Rect2(0, 0, 778, 1596)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjhpb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ponx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw1ab")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpvfd")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rabd"]
size = Vector2(177, 484)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msyku"]
size = Vector2(130, 254)

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "entity")]
process_mode = 1
collision_layer = 3
script = ExtResource("1_otwkr")
sprite = NodePath("AnimatedSprite2D")
entity = NodePath(".")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_82wuj")
initial_state = NodePath("PlayerIdleState")

[node name="PlayerWalkState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_mxsvf")

[node name="PlayerIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_4mfob")

[node name="PlayerJumpState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_h8uob")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_pjhpb")
animation = &"Jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(21, 8)
shape = SubResource("RectangleShape2D_0rabd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(25, 120)
shape = SubResource("RectangleShape2D_msyku")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
